# dota2-assistant

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-check.yml  web-check.yml
services/overwolf_app/: __init__.py
services/overwolf_app/ts/public/: manifest.json
services/overwolf_app/ts/src/in_game/: in_game.ts
services/web/: __init__.py
services/web/react-app/: package-lock.json
services/web_api/: __init__.py  __main__.py
services/web_api/tests/: __init__.py
