[tool.poetry]
name = "dota2-assistant"
version = "0.1.0"
description = "Dota 2 Assistant"
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
